--- a/Flask_project/app/templates/index.html
+++ b/Flask_project/app/templates/index.html
@@ -7,13 +7,13 @@
 <body>
     <style>
       H1 {
-            color: #000080;
+            color: #B22222;
             font-size: 200%;
             font-family: Arial, Verdana, sans-serif;
             text-align: center;
         }
         H2 {
-            color: #000080;
+            color: #FF4500;
             font-size: 200%;
             font-family: Arial, Verdana, sans-serif;
             text-align: center;
@@ -33,13 +33,20 @@
         {% block menu %}
         <h2><a href="http://127.0.0.1:5000/index/">Расчет стоимости поездки</a></h2>
         <h2><a href="https://www.drive2.ru/o/b/674196891725988538/">Что проверить перед поездкой?</a></h2>
-        <h2><a href="https://fuelprices.ru/">Актуальные цены на бензин в России</a></h2>
+        <h2><a href="https://forkagro.com/p/gasoline">Актуальные цены на бензин в России</a></h2>
         {% endblock %}
     </menu>
 
     <content>
         {% block content%}
             <form method="post">
+    <p>
+        <label for="point_a">Точка А</label>
+        <input type="text" name="point_a" id="point_a" style="font-size:25px;">
+        <label for="point_b">Точка Б</label>
+        <input type="text" name="point_b" id="point_b" style="font-size:25px;">
+    </p>
+
     <p>
       <label for="distance">Введите расстояние поездки(км)</label>
       <input type="text" name="distance" id="distance" style="font-size:25px;">
@@ -55,7 +62,11 @@
       <input type="text" name="fuel_price" id="fuel_price" style="font-size:25px;">
     </p>
 
-    <h1>{{ print_ }}</h1><br>
+    <h1>
+        <p>{{ print_1 }}</p>
+        <p>{{ print_2 }}</p>
+        <p>{{ print_3 }}</p>
+    </h1><br>
 
     <p>
       <button type="submit">Рассчитать</button>
