--- a/FastAPI_project/templates/index.html
+++ b/FastAPI_project/templates/index.html
@@ -33,7 +33,7 @@
         {% block menu %}
         <h2><a href="http://127.0.0.1:8000/index">Расчет стоимости поездки</a></h2>
         <h2><a href="https://www.drive2.ru/o/b/674196891725988538/">Что проверить перед поездкой?</a></h2>
-        <h2><a href="https://fuelprices.ru/">Актуальные цены на бензин в России</a></h2>
+        <h2><a href="https://forkagro.com/p/gasoline">Актуальные цены на бензин в России</a></h2>
         {% endblock %}
     </menu>
 
